--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
                     <!-- Classy Menu -->
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
 
-                        <!-- Logo -->
-                        <a class="nav-brand" href="./index.html"><img src="./img/core-img/logo.png" alt=""></a>
+                        <!-- Logo >
+                        <a class="nav-brand" href="./index.html"><img src="./img/core-img/logo.png" alt=""></a-->
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -398,10 +398,10 @@
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                         </div>
-                        <!-- Footer Logo -->
+                        <!-- Footer Logo >
                         <div class="footer-logo">
                             <a href="#"><img src="img/core-img/logo2.png" alt=""></a>
-                        </div>
+                        </div-->
                         <!-- Social Info -->
                         <div class="social-info">
                             <a href="#"><i class="ti-facebook" aria-hidden="true"></i></a>
