--- a/single-blog.html
+++ b/single-blog.html
@@ -53,7 +53,7 @@
                     <!-- Classy Menu -->
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
 
-                        <!-- Logo -->
+                        <!-- Logo >
                         <a class="nav-brand" href="./index.html"><img src="./img/core-img/logo.png" alt=""></a-->
 
                         <!-- Navbar Toggler -->
