--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                         </div>
                         <!-- Footer Logo >
                         <div class="footer-logo">
-                            <a href="#"><img src="img/core-img/logo2.png" alt=""></a>
+                            <a href="#"><img src="img/core-img/logo2.png" alt="k"></a>
                         </div-->
                         <!-- Social Info -->
                         <div class="social-info">
