--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- Title -->
     <title>Lone Wanderer</title>
 
-    <!-- Favicon -->
-    <link rel="icon" href="./img/core-img/favicon.png">
+    <!-- Favicon 
+    <link rel="icon" href="./img/core-img/favicon.png"-->
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
