--- a/blog.html
+++ b/blog.html
@@ -306,7 +306,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <h2>Follow Instagram</h2>
-                        <p>@Alime_photographer</p>
+                        <p>@lone_wandererr_pics</p>
                     </div>
                 </div>
             </div>
