--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
                             <div class="welcome-text">
                                 <h2 data-animation="bounceInDown" data-delay="900ms">Hello <br>I'm Anna</h2>
                                 <p data-animation="bounceInDown" data-delay="500ms">And here is my art.</p>
-                                <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
+                                <!--div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
                                     <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
                                     <a class="hero-mail-contact" href="mailto:a.yu.antonova@gmail.com">a.yu.antonova@gmail.com</a>
-                                </div>
+                                </div-->
                             </div>
                         </div>
                     </div>
