Tab Pages taken out

--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
                             <div class="classynav">
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
+                                    <!--li><a href="#">Pages</a>
                                         <ul class="dropdown">
                                             <li><a href="./index.html">- Home</a></li>
                                             <li><a href="./about.html">- About</a></li>
@@ -88,7 +88,7 @@
                                                 </ul>
                                             </li>
                                         </ul>
-                                    </li>
+                                    </li-->
                                     <li><a href="./about.html">About</a></li>
                                     <li><a href="./gallery.html">Gallery</a></li>
                                     <li class="active"><a href="./blog.html">Blog</a></li>
