filling and subscribing the Gallery

--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
                     <!-- Contact Info -->
                     <div class="contact-info mb-30">
                         <p>Email</p>
-                        <a href="mailto:a.yu.antonova@gmail.com">a.yu.antonova@gmail.com</a>
+                        <a href="mailto:a.yu.antonova@gmail.com">a.yu.antonova AT gmail</a>
                     </div>
                     <!-- Contact Info -->
                     <div class="contact-info mb-30">
