--- a/gallery.html
+++ b/gallery.html
@@ -149,13 +149,41 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/n1.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/n1.jpg" class="portfolio-img">+</a>
-                        </div>
+                        <figure>
+                            <img src="img/bg-img/n1.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/n1.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#N1GOE Summer fields 19x32, 25Eu</figcaption>
+                        </figure>
                     </div>
                 </div>
 
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/n2.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/n2.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#N2IST Fishermen on Bosphorus, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/n3.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/n3.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#N3SOL Northern lakes, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nudes mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
@@ -169,7 +197,10 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
+                        <figure>
                         <img src="img/bg-img/u1.jpg" alt="">
+                        <figcaption>#U1BRC Barcelona 20x20 40Eu</figcaption>
+                        </figure>
                         <div class="hover-content">
                             <a href="img/bg-img/u1.jpg" class="portfolio-img">+</a>
                         </div>
@@ -179,20 +210,66 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/u2.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/u2.jpg" class="portfolio-img">+</a>
-                        </div>
+                        <figure>
+                            <img src="img/bg-img/u2.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u2.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U2BRLN Berlin, Gendarmenmarkt 15x19, 25 Eu</figcaption>
+                        </figure>
+
                     </div>
                 </div>
 
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/u3.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/u3.jpg" class="portfolio-img">+</a>
-                        </div>
+                        <figure>
+                            <img src="img/bg-img/u3.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u3.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U3GOE Göttingen 25x25, 40Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u4.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u4.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U4GOE Göttingen DINA5, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u6.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u6.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U6GOE Göttingen 25x25, 30Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u9.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u9.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U9GOE Göttingen DIN5, 30Eu</figcaption>
+                        </figure>
                     </div>
                 </div>
 
@@ -209,14 +286,67 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/g2.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/g2.jpg" class="portfolio-img">+</a>
-                        </div>
+                        <figure>
+                            <img src="img/bg-img/g2.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/g2.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#G1HDB Heidelberg 25Eu</figcaption>
+                        </figure>
                     </div>
                 </div>
 
-                
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/g3.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/g3.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#G3VN Vienna 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div class="single-portfolio-content">
+                    <figure>
+                        <img src="img/bg-img/g4.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/g4.jpg" class="portfolio-img">+</a>
+                        </div>
+                        <figcaption>#G4GOE Göttingen</figcaption>
+                    </figure>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div class="single-portfolio-content">
+                    <figure>
+                        <img src="img/bg-img/g5.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/g5.jpg" class="portfolio-img">+</a>
+                        </div>
+                        <figcaption>#G5GOE Göttingen</figcaption>
+                    </figure>
+                </div>
+            </div>
+
+            <!-- Single Gallery Item -->
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div class="single-portfolio-content">
+                    <figure>
+                        <img src="img/bg-img/g6.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/g6.jpg" class="portfolio-img">+</a>
+                        </div>
+                        <figcaption>#G6GOE Göttingen Theatre DINA5 25Eu</figcaption>
+                    </figure>
+                </div>
             </div>
 
             <div class="row">
