--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
                         <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
                         <!--p class="wow fadeInUp" data-wow-delay="300ms">I am a full-time mathematician based in Dresden, Germany, so I can tell you maths is the same as art, but for creativity you need to use another hemisphere. </p--> 
                         <p class="wow fadeInUp" data-wow-delay="300ms">I have been painting since I remember myself. In primary school I was attending evening free drawing classes where I was exposed to some academical basics: volume, perspective, anatomy. In my late university years I was attending a private watercolor school and completed a four-year course of academic still life. (This is the only art diploma I have). Besides I have completed numerous on- and offline watercolour masterclasses which gave me A LOT.  </p>                            
-                        <a class="btn alime-btn btn-2 mt-30 wow fadeInUp" data-wow-delay="500ms" href="#">Contact Me</a>
+                        <a class="btn alime-btn btn-2 mt-30 wow fadeInUp" data-wow-delay="500ms" href="./contact.html">Contact Me</a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
