--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <h2>Follow Instagram</h2>
-                        <p>@Alime_photographer</p>
+                        <a href="https://www.instagram.com/lone_wandererr_pics/" target="_blank"><p>@lone_wandererr_pics</p></a>
                     </div>
                 </div>
             </div>
