--- a/gallery.html
+++ b/gallery.html
@@ -308,47 +308,47 @@
                         </figure>
                     </div>
                 </div>
-            </div>
+            
 
-            <!-- Single Gallery Item -->
-            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="500ms">
-                <div class="single-portfolio-content">
-                    <figure>
-                        <img src="img/bg-img/g4.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/g4.jpg" class="portfolio-img">+</a>
-                        </div>
-                        <figcaption>#G4GOE Göttingen</figcaption>
-                    </figure>
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/g4.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/g4.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#G4GOE Göttingen</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/g5.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/g5.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#G5GOE Göttingen</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/g6.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/g6.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#G6GOE Göttingen Theatre DINA5 25Eu</figcaption>
+                        </figure>
+                    </div>
                 </div>
             </div>
-
-            <!-- Single Gallery Item -->
-            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="500ms">
-                <div class="single-portfolio-content">
-                    <figure>
-                        <img src="img/bg-img/g5.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/g5.jpg" class="portfolio-img">+</a>
-                        </div>
-                        <figcaption>#G5GOE Göttingen</figcaption>
-                    </figure>
-                </div>
-            </div>
-
-            <!-- Single Gallery Item -->
-            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="500ms">
-                <div class="single-portfolio-content">
-                    <figure>
-                        <img src="img/bg-img/g6.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/g6.jpg" class="portfolio-img">+</a>
-                        </div>
-                        <figcaption>#G6GOE Göttingen Theatre DINA5 25Eu</figcaption>
-                    </figure>
-                </div>
-            </div>
-
             <div class="row">
                 <div class="col-12 text-center wow fadeInUp" data-wow-delay="800ms">
                     <a href="#" class="btn alime-btn btn-2 mt-15">View More</a>
@@ -365,7 +365,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <h2>Follow Instagram</h2>
-                        <p>@lone_wandererr_pics</p>
+                        <a href="https://www.instagram.com/lone_wandererr_pics/" target="_blank"><p>@lone_wandererr_pics</p></a>
                     </div>
                 </div>
             </div>
