--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
             <div class="row">
                 <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                    <a href="#" class="btn alime-btn btn-2 mt-15">View More</a>
+                    <a href="./gallery.html" class="btn alime-btn btn-2 mt-15">View More</a>
                 </div>
             </div>
         </div>
@@ -258,7 +258,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <h2>Follow Instagram</h2>
-                        <p>@lone_wandererr_pics</p>
+                        <a href="https://www.instagram.com/lone_wandererr_pics/" target="_blank"><p>@lone_wandererr_pics</p></a>
                     </div>
                 </div>
             </div>
