--- a/about.html
+++ b/about.html
@@ -142,7 +142,10 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="about-video-area mb-80 wow fadeInUp" data-wow-delay="100ms">
-                        <img src="img/bg-img/me.jpg" alt="">
+                        <figure>
+                            <img src="img/bg-img/me.jpg" alt="">
+                            <figcaption><a href="https://www.instagram.com/julia.klimova12/" target="_blank">photo by @julia.klimova </a></figcaption>
+                        </figure>
                         <!--div class="video-icon">
                             <a href="https://www.youtube.com/watch?v=sSakBz_eYzQ" class="video-play-btn"><i class="arrow_triangle-right"></i></a>
                         </div-->
@@ -294,7 +297,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <h2>Follow Instagram</h2>
-                        <p>@lone_wandererr_pics</p>
+                        <a href="https://www.instagram.com/lone_wandererr_pics/" target="_blank"><p>@lone_wandererr_pics</p></a>
                     </div>
                 </div>
             </div>
