--- a/blogcontent.html
+++ b/blogcontent.html
@@ -239,7 +239,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <h2>Follow Instagram</h2>
-                        <p>@lone_wandererr_pics</p>
+                        <a href="https://www.instagram.com/lone_wandererr_pics/" target="_blank"><p>@lone_wandererr_pics</p></a>
                     </div>
                 </div>
             </div>
