--- a/gallery.html
+++ b/gallery.html
@@ -193,7 +193,15 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nudes mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/nude2.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/nude2.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
