--- a/gallery.html
+++ b/gallery.html
@@ -187,10 +187,13 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nudes mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/nude1.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/nude1.jpg" class="portfolio-img">+</a>
-                        </div>
+                        <figure>
+                            <img src="img/bg-img/nude1.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/nude1.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#NY1 Nude 1, 12Eu</figcaption>
+                    </figure>
                     </div>
                 </div>
                 <!-- Single Gallery Item -->
