--- a/gallery.html
+++ b/gallery.html
@@ -145,6 +145,7 @@
                 </div>
             </div>
 
+            <p>Welcome to my Gallery. Here you can view my pictures, multiple filters are available. If you have some questions or comments feel free to <a href="contact.html">contact me</a>. Pictures with indices are available for purchases, please, provide the index (e.g. #N2IST) when referring to a particular picture.</p>
             <div class="row alime-portfolio">
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
