--- a/gallery.html
+++ b/gallery.html
@@ -136,11 +136,11 @@
                     <div class="alime-projects-menu wow fadeInUp" data-wow-delay="100ms">
                         <div class="portfolio-menu text-center">
                             <button class="btn active" data-filter="*">All</button>
-                            <div class="dropdown">
+                            <div class="dropdown classynav">
                                 <button class="btn dropbtn" data-filter=".urban">Urban</button>
                                 <div class="dropdown-content">
                                 
-                                    <a href="#" data-filter=".goe">Goettingen</a>
+                                    <a href="#" data-filter=".goe">Göttingen</a>
                                     <a href="#" data-filter=".hdb">Heidelberg</a>
                                     <a href="#" data-filter=".paris">Paris</a>
                                     <a href="#" data-filter=".bcn">Barcelona</a>
@@ -156,7 +156,7 @@
                 </div>
             </div>
 
-            <p>Welcome to my Gallery. Here you can view my pictures, multiple filters are available. If you have some questions or comments feel free to <a href="contact.html">contact me</a>. Pictures with indices are available for purchases, please, provide the index (e.g. #N2IST) when referring to a particular picture.</p>
+            <p>Welcome to my Gallery. Here you can view my pictures. If you have some questions or comments feel free to <a href="contact.html">contact me</a>. Pictures with indices are available for purchases, please, provide the index (e.g. #N2IST) when referring to a particular picture.</p>
             <div class="row alime-portfolio">
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature goe mb-30 wow fadeInUp" data-wow-delay="100ms">
