about  and contact updated

--- a/blogcontent.html
+++ b/blogcontent.html
@@ -208,7 +208,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-10">
                     <!-- Blog Details Text -->
-                    Exhibition in <a href="http://art-supplement.de/">Art Supplement Gallery</a>
+                    Exhibition in <a href="http://art-supplement.de/" target="_blank">Art Supplement Gallery</a>
                     <a href="#" class="btn alime-btn btn-2 text-center wow fadeInUp mt-15 readMore" data-wow-delay="800ms">read further</a> 
                     <div class="moreContent">
                         <div class="my-5">
@@ -264,7 +264,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-10">
                     <!-- Blog Details Text -->
-                    Exhibition in <a href="https://www.roccartgallery.com/">Roccart Gallery, Florence</a>
+                    Exhibition in <a href="https://www.roccartgallery.com/" target="_blank">Roccart Gallery, Florence</a>
                     <a href="#" class="btn alime-btn btn-2 text-center wow fadeInUp mt-15 readMore" data-wow-delay="800ms">read further</a> 
                     <div class="moreContent">
                         <p>This has happened by itself. Fabio Rocca the owner of a gallery in Florence found me on Instagram and made me an offer I could not refuse. So voila my four pictures were sent to Florence and I travelled there myself for the Vernisage...</p>
