--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
                     <!-- Contact Info -->
                     <div class="contact-info mb-30">
                         <p>Visit Me</p>
-                        <a href="#">In Göttingen, Germany</a>
+                        <a href="#">In Frankfurt am Main, Germany</a>
                     </div>
                 </div>
             </div>
