--- a/blogcontent.html
+++ b/blogcontent.html
@@ -213,7 +213,7 @@
                     <div class="moreContent">
                         <div class="my-5">
                             <div class="row">
-                                <div class="col-12 col-lg-5">
+                                <div class="col-12 col-lg-6">
                                     <div class="col-12 col-lg-12 col-sm-6">
                                             <img class="mb-10" src="img/bg-img/g2.jpg" alt="">
                                     </div>                                        
@@ -221,7 +221,7 @@
                                         <img class="mb-10" src="img/bg-img/n2.jpg" alt="">
                                     </div>
                                 </div>
-                                <div class="col-12 col-lg-6">
+                                <div class="col-12 col-lg-6 col-sm-6">
                                     <img class="mb-10" src="img/bg-img/u6.jpg" alt="">
                                 </div>
                             </div>
