--- a/blogcontent.html
+++ b/blogcontent.html
@@ -217,7 +217,7 @@
                                     <div class="col-12 col-lg-12 col-sm-12">
                                             <img class="mb-10" src="img/bg-img/g2.jpg" alt="">
                                     </div>                                        
-                                    <div class="col-12 col-lg-12 col-sm-12">
+                                    <div class="col-12 col-lg-12 col-sm-12 col-md-6">
                                         <img class="mb-10" src="img/bg-img/n2.jpg" alt="">
                                     </div>
                                 </div>
