--- a/blogcontent.html
+++ b/blogcontent.html
@@ -213,16 +213,18 @@
                     <div class="moreContent">
                         <div class="my-5">
                             <div class="row">
-                                <div class="col-12 col-lg-6 col-md-6">
-                                    <div class="col-12 col-lg-12 col-sm-12">
-                                            <img class="mb-10" src="img/bg-img/g2.jpg" alt="">
+                                <div class="col-12 col-lg-6 col-md-6 col-sm-12">
+                                    <div class="col-12 ">
+                                        <img class="mb-10" src="img/bg-img/g2.jpg" alt="">
                                     </div>                                        
-                                    <div class="col-12 col-lg-12 col-sm-12 col-md-6">
+                                    <div class="col-12">
                                         <img class="mb-10" src="img/bg-img/n2.jpg" alt="">
                                     </div>
                                 </div>
-                                <div class="col-12 col-lg-6 col-sm-12 col-md-6">
-                                    <img class="mb-10" src="img/bg-img/u6.jpg" alt="">
+                                <div class="col-12 col-lg-6 col-md-6 col-sm-12">
+                                    <div class="col-12">
+                                        <img class="mb-10" src="img/bg-img/u6.jpg" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
