--- a/gallery.html
+++ b/gallery.html
@@ -138,7 +138,7 @@
                             <button class="btn active" data-filter="*">All</button>
                             <div class="dropdown classynav">
                                 <button class="btn dropbtn" data-filter=".urban">Urban</button>
-                                <div class="dropdown-content">
+                                <!--div class="dropdown-content">
                                 
                                     <a href="#" data-filter=".goe">Göttingen</a>
                                     <a href="#" data-filter=".hdb">Heidelberg</a>
@@ -146,7 +146,7 @@
                                     <a href="#" data-filter=".bcn">Barcelona</a>
                                     <a href="#" data-filter=".ist">Istanbul</a>
                                 
-                                </div>
+                                </div-->
                             </div>
                             <button class="btn" data-filter=".nature">Nature</button>
                             <button class="btn" data-filter=".nudes">Nudes</button>
@@ -204,7 +204,7 @@
                             <div class="hover-content">
                                 <a href="img/bg-img/nude1.jpg" class="portfolio-img">+</a>
                             </div>
-                            <figcaption>#NY1 Nude 1, 12Eu</figcaption>
+                            <figcaption></figcaption>
                     </figure>
                     </div>
                 </div>
